# Copyright 2020-2025 David Robillard <d@drobilla.net>
# SPDX-License-Identifier: 0BSD OR ISC

config = configuration_data()
config.set('SERD_SRCDIR', serd_src_root)
config.set('DOX_OUTPUT', meson.current_build_dir() / '..')

doxyfile = configure_file(
  configuration: config,
  input: files('../Doxyfile.in'),
  output: 'Doxyfile',
)

doxygen_xml = custom_target(
  'index.xml',
  command: [doxygen, '@INPUT0@'],
  input: [doxyfile] + c_headers,
  output: [
    'index.xml',

    'group__serd.xml',
    'group__serd__attributes.xml',
    'group__serd__binary.xml',
    'group__serd__blob__view.xml',
    'group__serd__buffer.xml',
    'group__serd__canon.xml',
    'group__serd__caret__view.xml',
    'group__serd__data.xml',
    'group__serd__env.xml',
    'group__serd__errors.xml',
    'group__serd__event.xml',
    'group__serd__event__constructors.xml',
    'group__serd__field.xml',
    'group__serd__file_uri.xml',
    'group__serd__filter.xml',
    'group__serd__handler.xml',
    'group__serd__input__stream.xml',
    'group__serd__library.xml',
    'group__serd__literal__view.xml',
    'group__serd__logging.xml',
    'group__serd__memory.xml',
    'group__serd__node__arguments.xml',
    'group__serd__node__flags.xml',
    'group__serd__node__id.xml',
    'group__serd__node__type.xml',
    'group__serd__node__value.xml',
    'group__serd__nodes.xml',
    'group__serd__object__view.xml',
    'group__serd__output__stream.xml',
    'group__serd__reader.xml',
    'group__serd__reading__writing.xml',
    'group__serd__sink.xml',
    'group__serd__statement__view.xml',
    'group__serd__status.xml',
    'group__serd__storage.xml',
    'group__serd__stream.xml',
    'group__serd__stream__result.xml',
    'group__serd__streaming.xml',
    'group__serd__string.xml',
    'group__serd__string__pair__view.xml',
    'group__serd__syntax.xml',
    'group__serd__tee.xml',
    'group__serd__token__view.xml',
    'group__serd__uri.xml',
    'group__serd__utilities.xml',
    'group__serd__version.xml',
    'group__serd__world.xml',
    'group__serd__writer.xml',

    'attributes_8h.xml',
    'binary_8h.xml',
    'blob__view_8h.xml',
    'buffer_8h.xml',
    'canon_8h.xml',
    'caret__view_8h.xml',
    'env_8h.xml',
    'event_8h.xml',
    'field_8h.xml',
    'file_uri_8h.xml',
    'filter_8h.xml',
    'handler_8h.xml',
    'input__stream_8h.xml',
    'literal__view_8h.xml',
    'log_8h.xml',
    'node__args_8h.xml',
    'node__flags_8h.xml',
    'node__id_8h.xml',
    'node__type_8h.xml',
    'nodes_8h.xml',
    'object__view_8h.xml',
    'output__stream_8h.xml',
    'reader_8h.xml',
    'serd_8h.xml',
    'sink_8h.xml',
    'statement__view_8h.xml',
    'status_8h.xml',
    'stream_8h.xml',
    'stream__result_8h.xml',
    'string_8h.xml',
    'string__pair__view_8h.xml',
    'syntax_8h.xml',
    'tee_8h.xml',
    'token__view_8h.xml',
    'uri_8h.xml',
    'value_8h.xml',
    'version_8h.xml',
    'world_8h.xml',
    'writer_8h.xml',

    'structSerdBlobView.xml',
    'structSerdBuffer.xml',
    'structSerdCaretView.xml',
    'structSerdEvent.xml',
    'structSerdInputStream.xml',
    'structSerdLimits.xml',
    'structSerdLiteralView.xml',
    'structSerdNodeArgs.xml',
    'structSerdObjectView.xml',
    'structSerdOutputStream.xml',
    'structSerdSink.xml',
    'structSerdStatementView.xml',
    'structSerdStreamResult.xml',
    'structSerdString.xml',
    'structSerdStringPairView.xml',
    'structSerdTokenView.xml',
    'structSerdURIComponent.xml',
    'structSerdURIView.xml',
    'structSerdValue.xml',
    'unionSerdNodeArgsData.xml',
    'unionSerdValueData.xml',
  ],
)
